# EdgeDrive-a-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assistant_gui.cpp  encode_kws.py  main-cuda.cu  main.cpp  requirements.txt  run_assistant.bat  stt_service.cpp  tts_service.cpp
Kuksa-vss-data/: diff-json.py  format-json.py  inject_custom_vss.py  vss_rel_3.0.json  vss_rel_3.0_vs_vss_rel_4.1_diff.txt  vss_rel_3.1.1.csv  vss_rel_3.1.1.json  vss_rel_4.0.csv  vss_rel_4.1.csv  vss_rel_4.1.json  vss_rel_4.1_noexpand.json
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: AnalogGauge.jsx  CameraView.jsx  Gauges.jsx  MapView.jsx  Pedals.jsx  StartupAnimation.jsx  WifiGauge.jsx
docs/: implementation_plan-21-5-26.md  implementation_plan22-5-26-002.md  implementation_plan25-5-26-001.md  implementation_plan25-5-26-002.md  implementation_plan25-5-26-003.md  implementation_plan25-5-26-004.md  implementation_plan25-5-26-005.md  walkthrough25-5-26-002.md  walkthrough25-5-26-003.md  walkthrough25-5-26-004.md  walkthrough25-5-26.md
orchestrator/: server.py  telemetry_config.json
resources/: build-command.md
simulator/: kuksa_feeder.py  main.py  simulation_config.json
